tests/invalid/binop_type_mismatch.ar
fn main() {
    // unsigned + signed
    {
        const a: u8;
        const b: i8;
        const c = a + b;
    }

    {
        const a: u16;
        const b: i16;
        const c = a + b;
    }

    {
        const a: u32;
        const b: i32;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i64;
        const c = a + b;
    }

    // signed + unsigned
    {
        const a: i8;
        const b: u8;
        const c = a + b;
    }

    {
        const a: i16;
        const b: u16;
        const c = a + b;
    }

    {
        const a: i32;
        const b: u32;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u64;
        const c = a + b;
    }

    // unsigned + signed (different sizes)
    {
        const a: u8;
        const b: i64;
        const c = a + b;
    }

    {
        const a: u16;
        const b: i64;
        const c = a + b;
    }

    {
        const a: u32;
        const b: i16;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i8;
        const c = a + b;
    }

    {
        const a: u64;
        const b: i32;
        const c = a + b;
    }

    // signed + unsigned (different sizes)
    {
        const a: i8;
        const b: u64;
        const c = a + b;
    }

    {
        const a: i16;
        const b: u64;
        const c = a + b;
    }

    {
        const a: i32;
        const b: u16;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u8;
        const c = a + b;
    }

    {
        const a: i64;
        const b: u32;
        const c = a + b;
    }
}

//! 6:21: error: implicit cast error: `u8` and `i8`
//! 12:21: error: implicit cast error: `u16` and `i16`
//! 18:21: error: implicit cast error: `u32` and `i32`
//! 24:21: error: implicit cast error: `u64` and `i64`
//! 31:21: error: implicit cast error: `i8` and `u8`
//! 37:21: error: implicit cast error: `i16` and `u16`
//! 43:21: error: implicit cast error: `i32` and `u32`
//! 49:21: error: implicit cast error: `i64` and `u64`
//! 56:21: error: implicit cast error: `u8` and `i64`
//! 62:21: error: implicit cast error: `u16` and `i64`
//! 68:21: error: implicit cast error: `u32` and `i16`
//! 74:21: error: implicit cast error: `u64` and `i8`
//! 80:21: error: implicit cast error: `u64` and `i32`
//! 87:21: error: implicit cast error: `i8` and `u64`
//! 93:21: error: implicit cast error: `i16` and `u64`
//! 99:21: error: implicit cast error: `i32` and `u16`
//! 105:21: error: implicit cast error: `i64` and `u8`
//! 111:21: error: implicit cast error: `i64` and `u32`
